--- a/src/app/features/auth/login/login.component.css
+++ b/src/app/features/auth/login/login.component.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .login-background {
   background-image: url("/assets/images/loginbg.jpg");
   background-size: cover; /* Ensures the image covers the entire area */
