Nambahin status "enabled", "disabled"

--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -67,7 +67,8 @@
     <button
       pButton
       type="button"
-      label="Simpan"
+      label="Submit"
+      icon="pi pi-save"
       (click)="saveSkills()"
       [disabled]="getUnfilledScoresCount() > 0"
     ></button>
