--- a/src/app/emp-technical-skill/emp-technical-skill.component.html
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.html
@@ -96,7 +96,7 @@
   <br />
   <div class="button-container">
     <p-button
-      label="Simpan"
+      label="Submit"
       icon="pi pi-save"
       (click)="saveTechs()"
       [disabled]="isPreviousYearSelected"
