--- a/src/app/emp-dev-plan/emp-dev-plan.component.html
+++ b/src/app/emp-dev-plan/emp-dev-plan.component.html
@@ -66,7 +66,7 @@
   <br />
   <div class="button-container">
     <p-button
-      label="Simpan"
+      label="Submit"
       icon="pi pi-save"
       (click)="savePlans()"
       class="save-button"
