--- a/src/app/emp-suggest/emp-suggest.component.html
+++ b/src/app/emp-suggest/emp-suggest.component.html
@@ -66,7 +66,7 @@
   <br />
   <div class="button-container">
     <p-button
-      label="simpan"
+      label="Submit"
       icon="pi pi-save"
       (click)="saveSuggestions()"
       class="btn btn-success"
