--- a/src/app/features/achievement/achievement.component.html
+++ b/src/app/features/achievement/achievement.component.html
@@ -51,15 +51,13 @@
       <br />
       <div class="p-field">
         <label for="enabled" class="form-label1">Enabled</label>
-
-        <select
-          id="enabled"
+        <p-toggleButton
           [(ngModel)]="newAchievement.enabled"
-          class="p-inputtext"
-        >
-          <option [value]="1">Enabled</option>
-          <option [value]="0">Disabled</option>
-        </select>
+          [onLabel]="'Enabled'"
+          [offLabel]="'Disabled'"
+          name="enabled"
+          (onChange)="newAchievement.enabled = $event.checked ? 1 : 0"
+        ></p-toggleButton>
       </div>
     </div>
     <p-footer>
@@ -116,14 +114,14 @@
       <br />
       <div class="p-field">
         <label for="editEnabled" class="form-label1">Enabled</label>
-        <select
-          id="editEnabled"
+
+        <p-toggleButton
           [(ngModel)]="editAchievement.enabled"
-          class="p-inputtext"
-        >
-          <option [value]="1">Enabled</option>
-          <option [value]="0">Disabled</option>
-        </select>
+          [onLabel]="'Enabled'"
+          [offLabel]="'Disabled'"
+          name="enabled"
+          (onChange)="editAchievement.enabled = $event.checked ? 1 : 0"
+        ></p-toggleButton>
       </div>
     </div>
     <p-footer>
@@ -180,6 +178,7 @@
           <tr>
             <th style="width: 10px">No.</th>
             <th class="division-column">Achievement Name</th>
+            <th class="action-column" style="text-align: center">Status</th>
             <th class="action-column">Action</th>
           </tr>
         </ng-template>
@@ -188,6 +187,12 @@
           <tr>
             <td class="no-column">{{ i + 1 }}</td>
             <td>{{ achievement.achievement_name }}</td>
+            <td style="text-align: center">
+              <p-tag
+                [severity]="achievement.enabled ? 'success' : 'danger'"
+                [value]="achievement.enabled ? 'Enabled' : 'Disabled'"
+              ></p-tag>
+            </td>
             <td>
               <div class="action-buttons">
                 <button
