--- a/src/app/features/group-attitude-skill/group-attitude-skill.component.html
+++ b/src/app/features/group-attitude-skill/group-attitude-skill.component.html
@@ -52,14 +52,13 @@
       <div class="p-field">
         <label for="enabled" class="form-label1">Enabled</label>
         <br />
-        <select
-          id="enabled"
+        <p-toggleButton
           [(ngModel)]="newGroupAttitudeSkill.enabled"
-          class="p-inputtext"
-        >
-          <option [value]="1">Enabled</option>
-          <option [value]="0">Disabled</option>
-        </select>
+          [onLabel]="'Enabled'"
+          [offLabel]="'Disabled'"
+          name="enabled"
+          (onChange)="newGroupAttitudeSkill.enabled = $event.checked ? 1 : 0"
+        ></p-toggleButton>
       </div>
     </div>
     <p-footer>
@@ -113,14 +112,16 @@
       <br />
       <div class="p-field">
         <label for="editEnabled" class="form-label2">Enabled</label>
-        <select
-          id="editEnabled"
+
+        <p-toggleButton
           [(ngModel)]="selectedGroupAttitudeSkill.enabled"
-          class="p-inputtext"
-        >
-          <option [value]="1">Enabled</option>
-          <option [value]="0">Disabled</option>
-        </select>
+          [onLabel]="'Enabled'"
+          [offLabel]="'Disabled'"
+          name="enabled"
+          (onChange)="
+            selectedGroupAttitudeSkill.enabled = $event.checked ? 1 : 0
+          "
+        ></p-toggleButton>
       </div>
     </div>
     <p-footer>
@@ -159,6 +160,7 @@
           <th></th>
           <th class="percent-column"></th>
           <th class="percent-column"></th>
+          <th class="percent-column"></th>
           <th class="percent-column">
             <div class="column-filter">
               <p-columnFilter
@@ -181,6 +183,7 @@
             Weight
             <p-sortIcon field="percentage"></p-sortIcon>
           </th>
+          <th style="text-align: center; width: 10px">Status</th>
           <th class="percent-column" style="text-align: center">Action</th>
         </tr>
       </ng-template>
@@ -190,6 +193,12 @@
           <td style="text-align: center">{{ i + 1 }}</td>
           <td style="text-align: center">{{ achievement.group_name }}</td>
           <td style="text-align: center">{{ achievement.percentage }}</td>
+          <td style="text-align: center">
+            <p-tag
+              [severity]="achievement.enabled ? 'success' : 'danger'"
+              [value]="achievement.enabled ? 'Enabled' : 'Disabled'"
+            ></p-tag>
+          </td>
           <td>
             <div class="action-buttons">
               <button
