--- a/src/app/features/user-summary/user-summary.component.html
+++ b/src/app/features/user-summary/user-summary.component.html
@@ -5,87 +5,133 @@
 <app-nav-bar></app-nav-bar>
 <h2 class="title">My Summary</h2>
 }
-<div class="container" style="padding: 20px; background-color: #f9f9f9;">
+<div class="container" style="padding: 20px; background-color: #f9f9f9">
   @if(!userId){
-    <div class="dropdown-container" style="margin-bottom: 10px; text-align: right;">
-      <p-dropdown
-        [options]="years"
-        [(ngModel)]="selectedYear"
-        (onChange)="onYearChange($event)"
-        optionLabel="label"
-        placeholder="Select a Year"
-        [ngStyle]="{'text-align': 'center'}"
-      ></p-dropdown>
-    </div>
+  <div
+    class="dropdown-container"
+    style="margin-bottom: 10px; text-align: right"
+  >
+    <p-dropdown
+      [options]="years"
+      [(ngModel)]="selectedYear"
+      (onChange)="onYearChange($event)"
+      optionLabel="label"
+      placeholder="Select a Year"
+      [ngStyle]="{ 'text-align': 'center' }"
+    ></p-dropdown>
+  </div>
   }
 
-  <div class="card" style="background-color: #ffffff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-    <h3 style="margin-bottom: 20px; color: #333;">Assessment Summary</h3>
-    <p-table [value]="combinedData" styleClass="table" responsiveLayout="scroll">
+  <div
+    class="card"
+    style="
+      background-color: #ffffff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    "
+  >
+    <h3 style="margin-bottom: 20px; color: #333">Assessment Summary</h3>
+    <p-table
+      [value]="combinedData"
+      styleClass="table"
+      responsiveLayout="scroll"
+    >
       <ng-template pTemplate="header">
         <tr>
-          <th style="width: 35%; text-align: left;">Aspect</th>
-          <th class="center-column" style="width: 20%;">Score</th>
-          <th class="center-column" style="width: 20%;">Weight</th>
-          <th class="center-column" style="width: 25%;">Final Score</th>
+          <th style="width: 35%; text-align: left">Aspect</th>
+          <th class="center-column" style="width: 20%">Score</th>
+          <th class="center-column" style="width: 20%">Weight</th>
+          <th class="center-column" style="width: 25%">Final Score</th>
         </tr>
       </ng-template>
 
       <ng-template pTemplate="body" let-item let-rowIndex="rowIndex">
-        <tr *ngIf="isNewSection(rowIndex, item.section)" class="section-header-row">
-          <td colspan="4" class="section-header" style="text-align: center; font-weight: bold; background-color: #f0f8ff;">
+        <tr
+          *ngIf="isNewSection(rowIndex, item.section)"
+          class="section-header-row"
+        >
+          <td
+            colspan="4"
+            class="section-header"
+            style="
+              text-align: center;
+              font-weight: bold;
+              background-color: #f0f8ff;
+            "
+          >
             {{ item.section }}
           </td>
         </tr>
         <tr>
-          <td style="padding: 8px;">{{ item.group_name }}</td>
-          <td class="center-column" style="padding: 8px;">{{ item.total_score }}</td>
-          <td class="center-column" style="padding: 8px;">{{ item.percentage }}%</td>
-          <td class="center-column" style="padding: 8px;">
+          <td style="padding: 8px">{{ item.group_name }}</td>
+          <td class="center-column" style="padding: 8px">
+            {{ item.total_score }}
+          </td>
+          <td class="center-column" style="padding: 8px">
+            {{ item.percentage }}%
+          </td>
+          <td class="center-column" style="padding: 8px">
             {{ Math.round(item.total_score * (item.percentage / 100)) }}
           </td>
         </tr>
       </ng-template>
 
       <ng-template pTemplate="footer">
-        <tr style="background-color: #f0f8ff; font-weight: bold;">
-          <td colspan="2" style="text-align: center;">Total Score:</td>
-          <td style="text-align: center;">{{ totalPercentage }}%</td>
-          <td style="text-align: center;">{{ assScore }}</td>
+        <tr style="background-color: #f0f8ff; font-weight: bold">
+          <td colspan="2" style="text-align: center">Total Score:</td>
+          <td style="text-align: center">{{ totalPercentage }}%</td>
+          <td style="text-align: center">{{ assScore }}</td>
         </tr>
       </ng-template>
 
       <ng-template pTemplate="emptymessage">
         <tr>
-          <td colspan="4" style="text-align: center; color: #999;">No data available</td>
+          <td colspan="4" style="text-align: center; color: #999">
+            No data available
+          </td>
         </tr>
       </ng-template>
     </p-table>
   </div>
 
   @if (userId){
-    <div class="card" style="margin-top: 10px ;background-color: #ffffff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-      <h3 style="margin-top: 10px; color: #333;">Suggestions</h3>
-      <p-table [value]="suggestions" styleClass="table" responsiveLayout="scroll">
-        <ng-template pTemplate="header">
-          <tr>
-            <th class="division-column" style="text-align: center;" colspan="2">Suggestion</th>
-          </tr>
-        </ng-template>
-  
-        <ng-template pTemplate="body" let-suggestion let-i="rowIndex">
-          <tr>
-            <td style="padding: 8px; text-align: center;">{{ i + 1 }}.</td>
-            <td style="padding: 8px;">{{ suggestion.suggestion }}</td>
-          </tr>
-        </ng-template>
-  
-        <ng-template pTemplate="emptymessage">
-          <tr>
-            <td colspan="2" style="text-align: center; color: #999;">No suggestions available</td>
-          </tr>
-        </ng-template>
-      </p-table>
-    </div>
+  <div
+    class="card"
+    style="
+      margin-top: 10px;
+      background-color: #ffffff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    "
+  >
+    <h3 style="margin-top: 10px; color: #333">Suggestions</h3>
+    <p-table [value]="suggestions" styleClass="table" responsiveLayout="scroll">
+      <ng-template pTemplate="header">
+        <tr>
+          <th style="width: 15px">No.</th>
+          <th class="division-column" colspan="2" style="text-align: center">
+            Suggestion
+          </th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-suggestion let-i="rowIndex">
+        <tr>
+          <td style="width: 15px">{{ i + 1 }}.</td>
+          <td sclass="division-column">{{ suggestion.suggestion }}</td>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="2" style="text-align: center; color: #999">
+            No suggestions available
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
   }
 </div>
