ngubah warna button di create edit

--- a/src/app/emp-achieve/emp-achieve.component.html
+++ b/src/app/emp-achieve/emp-achieve.component.html
@@ -82,6 +82,7 @@
         pButton
         label="Create"
         icon="pi pi-check"
+        class="p-button-sm p-button-info"
         (click)="createEmpAchieve()"
       ></button>
       <button
@@ -89,6 +90,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayCreateDialog = false"
       ></button>
     </p-footer>
@@ -164,6 +166,7 @@
         pButton
         label="Save"
         icon="pi pi-check"
+        class="p-button-sm p-button-info"
         (click)="updateEmpAchieve()"
       ></button>
       <button
@@ -171,6 +174,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayEditDialog = false"
       ></button>
     </p-footer>
