--- a/src/app/features/dev-plan/dev-plan.component.html
+++ b/src/app/features/dev-plan/dev-plan.component.html
@@ -55,6 +55,7 @@
         pButton
         label="Create"
         icon="pi pi-check"
+        class="p-button-sm p-button-info"
         (click)="createDevPlan()"
       ></button>
       <button
@@ -62,6 +63,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayCreateDialog = false"
       ></button>
     </p-footer>
@@ -103,6 +105,7 @@
         pButton
         label="Save"
         icon="pi pi-save"
+        class="p-button-sm p-button-info"
         (click)="updateDevPlan()"
       ></button>
       <button
@@ -110,6 +113,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayEditDialog = false"
       ></button>
     </p-footer>
