--- a/src/app/features/division/division.component.html
+++ b/src/app/features/division/division.component.html
@@ -44,6 +44,7 @@
         pButton
         label="Create"
         icon="pi pi-check"
+        class="p-button-sm p-button-info"
         (click)="createDivision()"
       ></button>
       <button
@@ -51,6 +52,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayCreateDialog = false"
       ></button>
     </p-footer>
@@ -81,6 +83,7 @@
         pButton
         label="Save"
         icon="pi pi-save"
+        class="p-button-sm p-button-info"
         (click)="updateDivision()"
       ></button>
       <button
@@ -88,6 +91,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayEditDialog = false"
       ></button>
     </p-footer>
