--- a/src/app/features/group-achievement/group-achievement.component.html
+++ b/src/app/features/group-achievement/group-achievement.component.html
@@ -63,6 +63,7 @@
         pButton
         label="Create"
         icon="pi pi-check"
+        class="p-button-sm p-button-info"
         (click)="createGroupAchievement()"
       ></button>
       <button
@@ -70,6 +71,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayCreateDialog = false"
       ></button>
     </p-footer>
@@ -122,6 +124,7 @@
         pButton
         label="Save"
         icon="pi pi-save"
+        class="p-button-sm p-button-info"
         (click)="updateGroupAchievement()"
       ></button>
       <button
@@ -129,6 +132,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayEditDialog = false"
       ></button>
     </p-footer>
