--- a/src/app/features/group-attitude-skill/group-attitude-skill.component.html
+++ b/src/app/features/group-attitude-skill/group-attitude-skill.component.html
@@ -67,6 +67,7 @@
         pButton
         label="Create"
         icon="pi pi-check"
+        class="p-button-sm p-button-info"
         (click)="createGroupAttitudeSkill()"
       ></button>
       <button
@@ -74,6 +75,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayCreateDialog = false"
       ></button>
     </p-footer>
@@ -130,6 +132,7 @@
         pButton
         label="Save"
         icon="pi pi-save"
+        class="p-button-sm p-button-info"
         (click)="updateGroupAttitudeSkill()"
       ></button>
       <button
@@ -137,6 +140,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayEditDialog = false"
       ></button>
     </p-footer>
