--- a/src/app/features/achievement/achievement.component.html
+++ b/src/app/features/achievement/achievement.component.html
@@ -66,6 +66,7 @@
         pButton
         label="Create"
         icon="pi pi-check"
+        class="p-button-sm p-button-info"
         (click)="createAchievement()"
       ></button>
       <button
@@ -73,6 +74,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayCreateDialog = false"
       ></button>
     </p-footer>
@@ -130,6 +132,7 @@
         pButton
         label="Save"
         icon="pi pi-check"
+        class="p-button-sm p-button-info"
         (click)="updateAchievement()"
       ></button>
       <button
@@ -137,6 +140,7 @@
         pButton
         label="Cancel"
         icon="pi pi-times"
+        class="p-button-sm p-button-danger"
         (click)="displayEditDialog = false"
       ></button>
     </p-footer>
