--- a/src/app/features/user/view-user-list/view-user-list.component.css
+++ b/src/app/features/user/view-user-list/view-user-list.component.css
@@ -3,3 +3,97 @@
   max-width: 650px !important;
   min-width: 300px !important;
 }
+
+.container {
+  max-width: 950px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.division-column {
+  width: 350px; /* Atur lebar kolom sesuai kebutuhan */
+  max-width: 350px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.action-column {
+  width: 150px;
+  max-width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.action-buttons button {
+  margin-right: 8px; /* Jarak antar tombol */
+}
+
+.action-buttons button:last-child {
+  margin-right: 0; /* Hapus margin pada tombol terakhir */
+}
+
+.title {
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.label {
+  font-weight: bold;
+  color: #555;
+}
+
+.input-field {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.group-container {
+  margin-top: 20px;
+  padding: 15px;
+  background-color: #e9f5ff;
+  border-radius: 5px;
+  border: 1px solid #b3d7ff;
+}
+
+.group-title {
+  color: #007bff;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.data-table {
+  margin-bottom: 15px;
+}
+
+.textarea-field {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: none;
+}
+
+.add-row-button {
+  margin-top: 10px;
+}
+
+.action-button-spacing {
+  margin-bottom: 10px;
+}
+
+.action-button-spacing:last-child {
+  margin-bottom: 0;
+}
