--- a/src/app/features/user-summary/user-summary.component.css
+++ b/src/app/features/user-summary/user-summary.component.css
@@ -68,3 +68,12 @@ table {
   color: #333;
   margin-bottom: 20px;
 }
+
+.table-border {
+  border-bottom: 1px solid #ccc;
+}
+
+.table-border td {
+  padding: 8px;
+  text-align: center;
+}
